--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,20 @@
 plugins {
     id 'java'
-    id 'application'
 }
 
 group 'org.example'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 repositories {
     mavenCentral()
 }
 
-application {
-    mainClassName = 'org.example.Game'
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.example.Game'
+        )
+    }
 }
 
 dependencies {
