--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.example.Game'
+                'Main-Class': 'org.example.Game'
         )
     }
 }
