--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ gradle-test:   # This job runs in the test stage.
     - comp2100
 
 gradle-deploy:
+  image: docker:24.0.6
   stage: build
   script:
     - docker build -t yaboibo/TowerCrawler
