--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,8 +40,9 @@ gradle-deploy:
   services:
     - docker:24.0.6-dind
   script:
-    - docker build -t yaboibo/towercrawler .
-    - docker push yaboibo/towercrawler
+    - docker login -u $CI_REGISTRY_USER $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker build -t yaboibo/comp2120-assignment3 .
+    - docker push yaboibo/comp2120-assignment3
   tags:
     - comp2100
     - docker
