--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,10 @@ stages:          # List of stages for jobs, and their order of execution
   - build
   - test
 
+variables:
+  DOCKER_HOST: tcp://docker:2376
+  DOCKER_TLS_CERTDIR: "/certs"
+
 gradle-build:       # This job runs in the build stage, which runs first.
   stage: build
   script:
