Revert "deployment now copies jar file to the root of the repository"
This reverts commit 1bf6e851880afd0c45c514a116fd16c12e8b932e

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,6 @@
 stages:          # List of stages for jobs, and their order of execution
   - build
   - test
-  - deploy
 
 variables:
   DOCKER_HOST: tcp://docker:2376
@@ -41,7 +40,7 @@ gradle-test:   # This job runs in the test stage.
 
 gradle-deploy:
   image: docker:24.0.6
-  stage: deploy
+  stage: build
   services:
     - docker:24.0.6-dind
   script:
@@ -52,13 +51,3 @@ gradle-deploy:
     - comp2100
     - docker
   allow_failure: true
-
-java-deploy:
-  stage: deploy
-  script:
-    - ./gradlew build
-    - cp build/libs/TowerCrawler-1.0.jar .
-    - git add TowerCrawler-1.0.jar
-    - git commit -m "AUTOMATED java deploy"
-  tags:
-    - comp2100
