--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,8 @@ gradle-deploy:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGESTRY_PASSWORD
     - docker build -t yaboibo/comp2120-assignment3 .
     - docker push yaboibo/comp2120-assignment3
+  rules:
+    - if: $CI_COMMIT_BRANCH == 'refs/heads/main
   tags:
     - comp2100
     - docker
