--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ gradle-deploy:
     - docker build -t yaboibo/comp2120-assignment3 .
     - docker push yaboibo/comp2120-assignment3
   rules:
-    - if: $CI_COMMIT_BRANCH == 'refs/heads/main'
+    - if: $CI_COMMIT_BRANCH == 'refs/heads/main' || $CI_COMMIT_BRANCH == 'refs/heads/Creating_Gradle_Run'
   tags:
     - comp2100
     - docker
